<resources>
    <string name="app_name">BukTrackz</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="progress">%1$s%%</string>
    <string name="progress_bar_numeric">Progress Bar - %1$d%%</string>
    <string name="progress_bar_text">Progress Bar - %1$s%%</string>
    <string name="progress_text">Progress Bar</string>
    <string name="empty_discover">Try to search best seliing books</string>
    <string name="empty_fav">No favorite books yet</string>
    <string name="empty_all">No books available. Try adding some!</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="language_text">Language</string>
    <string name="rate_us_text">Rate Us</string>
    <string name="about_app_text">About App</string>
    <string name="about_message_text">This app was created by Muhammad Althaaf Abqary. Its sole purpose is to help you track and save your reading progress while allowing you to take important notes on your books. This app does not collect any of your personal data, ensuring a safe experience. The bestseller book data is sourced from nytimes.com. Enjoy your reading!</string>
    <string name="message_dialog_language">Currently, this app only supports English and Indonesian.</string>
    <string name="title_language_dialog">Choose Language</string>
    <string name="toast_rate_text">This feature is not available yet</string>
    <string name="neutral_button_about">Close</string>
    <string name="title_about_dialog">About this App</string>
    <string name="tv_title_add_book">Journal about your reading book</string>
    <string name="btn_add_note">Add Note</string>
    <string name="btn_Save">Save</string>
    <string name="genre">Genre</string>
    <string name="dropdown_list_genre">Dropdown List Genre</string>
    <string name="cd_icon_book">Icon book for title text</string>
    <string name="title_hint">Title</string>
    <string name="author_hint">Author</string>
    <string name="total_pages_hint">Total Pages</string>
    <string name="current_page_hint">Current Page</string>
    <string name="rate_hint">Rate</string>
    <string name="last_read_hint">Last Read</string>
    <string name="dropdown_list_rate">Dropdown List Rate</string>
    <string name="cover_image_view">Cover image view</string>
    <string name="notes_text">Notes</string>
    <string name="button_for_edit_data">Button for edit data</string>
    <string name="button_for_add_favorite_book">Button for add favorite book</string>
    <string name="button_for_delete_book">Button for delete book</string>
    <string name="button_to_show_3_function_button">Show 3 function button</string>
    <string name="title_discover_text">Discover the best-selling books</string>
    <string name="hint_search_discover">Select Book Types</string>
    <string name="dropdown_list_types_book">Dropdown list types book</string>
    <string name="btn_Edit">Edit</string>
    <string name="tv_favorite_book">Your Favorite Book</string>
    <string name="tv_reading_book">Your Reading Book</string>
    <string name="fantasy">fantasy</string>
    <string name="self_growth">self growth</string>
    <string name="novel">novel</string>
    <string name="dystopic">dystopic</string>
    <string name="anthropology">anthropology</string>
    <string name="finance">finance</string>
    <string name="history">history</string>
    <string name="fiction">fiction</string>
    <string name="all">all</string>
    <string name="view_all">View all</string>
    <string name="title_home_text">Where Stories\nCome Alive</string>
    <string name="settings">Settings</string>
    <string name="preferences">PREFERENCES</string>
    <string name="about">ABOUT</string>
    <string name="icon_setting_about">Icon setting about</string>
    <string name="end_icon_for_item_setting">End icon for item setting</string>
    <string name="add">Add</string>
    <string name="discover">Discover</string>
    <string name="setting">Setting</string>
</resources>