<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.EditBookFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_cover"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:src="@drawable/cover_book"
            android:paddingVertical="8dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/cover_image_view"
            android:background="@drawable/bg_detail_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_edit_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:hint="@string/title_hint"
            app:hintTextAppearance="@style/TextAppearance.BukTrackz.BodySmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_cover">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_edit_image"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/icon_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="12dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_edit_author"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:hint="@string/author_hint"
            app:hintTextAppearance="@style/TextAppearance.BukTrackz.BodySmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_edit_title"
            app:startIconDrawable="@drawable/baseline_account_circle_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_edit_genre"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:hint="@string/genre"
            app:hintTextAppearance="@style/TextAppearance.BukTrackz.BodySmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_edit_author"
            app:startIconDrawable="@drawable/baseline_bookmark_24">

            <AutoCompleteTextView
                android:id="@+id/ac_edit_genre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/dropdown_list_genre"
                android:labelFor="@id/ti_edit_genre"
                android:fontFamily="@font/manrope_regular"
                android:inputType="none"
                app:simpleItems="@array/list_genre" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_edit_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_medium"
            android:layout_marginTop="16dp"
            android:text="@string/progress_text"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            app:drawableStartCompat="@drawable/icon_progress"
            android:drawablePadding="12dp"
            app:layout_constraintStart_toStartOf="@+id/ti_edit_genre"
            app:layout_constraintTop_toBottomOf="@+id/ti_edit_genre" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpi_edit_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="@+id/ti_edit_genre"
            app:layout_constraintStart_toStartOf="@+id/ti_edit_genre"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_progress_bar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_edit_total_pages"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:startIconDrawable="@drawable/icon_hash"
            android:hint="@string/total_pages_hint"
            app:hintTextAppearance="@style/TextAppearance.BukTrackz.BodySmall"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lpi_edit_page">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_edit_total_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/manrope_regular"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_edit_current_page"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="8dp"
            app:startIconDrawable="@drawable/icon_hash"
            android:hint="@string/current_page_hint"
            app:hintTextAppearance="@style/TextAppearance.BukTrackz.BodySmall"
            app:layout_constraintBottom_toBottomOf="@+id/ti_edit_total_pages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/ti_edit_total_pages">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_edit_current_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/manrope_regular"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_edit_rate"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/rate_hint"
            app:hintTextAppearance="@style/TextAppearance.BukTrackz.BodySmall"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_edit_total_pages"
            app:startIconDrawable="@drawable/icon_star">

            <AutoCompleteTextView
                android:id="@+id/ac_edit_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:labelFor="@id/ti_edit_rate"
                android:contentDescription="@string/dropdown_list_rate"
                android:fontFamily="@font/manrope_regular"
                android:inputType="none"
                app:simpleItems="@array/star" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_edit_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="8dp"
            android:hint="@string/last_read_hint"
            app:hintTextAppearance="@style/TextAppearance.BukTrackz.BodySmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/ti_edit_rate"
            app:startIconDrawable="@drawable/baseline_calendar_month_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_date_click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:fontFamily="@font/manrope_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/btn_edit_add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_note"
            app:shapeAppearance="@style/ShapeAppearance.BukTrackz.SmallComponent"
            android:fontFamily="@font/manrope_medium"
            app:layout_constraintStart_toStartOf="@+id/ti_edit_rate"
            app:layout_constraintTop_toBottomOf="@+id/ti_edit_rate"
            android:layout_marginTop="12dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_edit_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:listitem="@layout/item_note"
            tools:visibility="visible"
            tools:itemCount="3"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_edit_add_note" />

        <Button
            android:id="@+id/btn_edit"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:shapeAppearance="@style/ShapeAppearance.BukTrackz.SmallComponent"
            android:text="@string/btn_Edit"
            android:fontFamily="@font/manrope_semi_bold"
            android:layout_marginVertical="18dp"
            app:layout_constraintTop_toBottomOf="@id/rv_edit_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>