<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.discover.DiscoverFragment">

    <TextView
        android:id="@+id/tv_title_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/manrope_semi_bold"
        android:text="@string/title_discover_text"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_search_discover"
        app:hintTextAppearance="@style/TextAppearance.BukTrackz.BodySmall"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_total_pages"
        app:startIconDrawable="@drawable/icon_star">

        <AutoCompleteTextView
            android:id="@+id/ac_type"
            android:layout_width="match_parent"
            android:labelFor="@id/ti_type"
            android:contentDescription="@string/dropdown_list_types_book"
            android:layout_height="match_parent"
            android:fontFamily="@font/manrope_regular"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_result_best_seller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginTop="16dp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_loading"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading"
        tools:visibility="visible" />

    <include
        android:id="@+id/ic_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        layout="@layout/item_empty"/>
</LinearLayout>