<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.SettingFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="0dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_detail_img" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/icon_bug"
            android:layout_gravity="center"
            app:contentPadding="16dp"
            android:background="@color/md_theme_secondary"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.BukTrackz.Round"
            />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_semi_bold"
        android:layout_margin="16dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/settings"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_semi_bold"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:paddingHorizontal="16dp"
        android:textColor="@color/md_theme_secondary"
        android:paddingVertical="8dp"
        android:background="@drawable/bg_detail_img"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/preferences"/>

    <include
        android:id="@+id/card_dark_mode"
        android:layout_marginHorizontal="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_setting_switch"/>

    <include
        android:id="@+id/card_language"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_setting_about"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_semi_bold"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:paddingHorizontal="16dp"
        android:textColor="@color/md_theme_secondary"
        android:paddingVertical="8dp"
        android:background="@drawable/bg_detail_img"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/about"/>

    <include
        android:id="@+id/card_about"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_setting_about"/>

    <include
        android:id="@+id/card_rate"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="2dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_setting_about"/>
</LinearLayout>